--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,13 @@ body{
   width: 90%;
   margin: auto;
 }
+.mini-container{
+  width: 60%;
+  margin: auto;
+}
 body p{
   font-family: 'Source Sans Pro', sans-serif;
+  line-height: 1.6;
 }
 ul{
   list-style: none;
@@ -206,5 +211,58 @@ header .layer .left-box i{
 /* fine layer */
 /* fine header */
 /* inizio main */
-inizi
+/* inizio sezione browse */
+#browse{
+  height: 600px;
+  width: 100%;
+  background-color: #FFFFFF;
+  position: relative;
+  z-index: -2
+}
+/* sfondo */
+#browse .bg-img-right{
+  height: 600px;
+  position: absolute;
+  top: 80px;
+  right: 0;
+  z-index: -1;
+}
+#browse .mini-container{
+  position: relative;
+}
+#browse .mini-container .bg-img-left img{
+  height: 60px;
+  width: 60px;
+  position: absolute;
+  top: 100px;
+  left: 0;
+}
+/* fine sfondo */
+#browse .mini-container .content{
+  padding-top: 150px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+#browse .mini-container .content .text{
+  width: 60%;
+}
+#browse .mini-container .content .text h2{
+  font-size: 48px;
+  color: #3D404F;
+}
+#browse .mini-container .content .text p{
+  padding: 40px 0 60px 0;
+  font-size: 16px;
+  color: #3D404F;
+}
+#browse .mini-container .content .image{
+  width: 40%;
+}
+#browse .mini-container .content .image img{
+  height: 350px;
+  z-index: 1;
+}
+/* fine sezione browse */
 /* fine main */
