Add footer and END

--- a/css/style.css
+++ b/css/style.css
@@ -197,13 +197,29 @@ header .layer .img-bg img{
   left: 0;
 }
 /* fine img bg */
+/* inzio arrows */
+header .layer .arrow-left a i{
+  color: #FFFFFF;
+  position: absolute;
+  left: 40px;
+  top: 50%;
+  transform: translate(-50%);
+}
+header .layer .arrow-right a i{
+  color: #FFFFFF;
+  position: absolute;
+  right: 40px;
+  top: 50%;
+  transform: translate(-50%);
+}
+/* fine arrows */
 /* left box */
 header .layer .left-box{
-  height: 100px;
-  width: 40px;
+  height: 150px;
+  width: 60px;
   border-radius: 0 5px 5px 0;
   background-color:  #E9D758;
-  box-shadow: 0 0 3px #ccc;
+  box-shadow: 2px 2px 3px grey;
   position: fixed;
   top: 50%;
   left: 0;
@@ -216,7 +232,7 @@ header .layer .left-box{
   z-index: 2;
 }
 header .layer .left-box:hover{
-  width: 50px;
+  width: 70px;
 }
 header .layer .left-box i{
   color: #FFFFFF;
@@ -726,3 +742,94 @@ header .layer .left-box i{
 }
 /* fine sezione partners */
 /* fine main */
+/* inizio sezione footer */
+footer{
+  margin-top: 300px;
+  padding: 150px 0;
+  background-color: #E56768;
+}
+footer .mini-container{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  flex-wrap: nowrap;
+  color: #FFFFFF;
+}
+footer .mini-container .footer-left{
+  text-align: left;
+}
+footer .mini-container .footer-left .logo img{
+  height: 65px;
+}
+footer .mini-container .footer-left p{
+  padding: 30px 0;
+}
+footer .mini-container .footer-left a{
+  margin-right: 10px;
+  padding: 20px 22px;
+  border: 1px solid #E9D758;
+  border-radius: 50%;
+}
+footer .mini-container .footer-left a i{
+  width: 14px;
+  height: 14px;
+}
+footer .mini-container .footer-middle h3{
+  font-size: 20px;
+  font-weight: 400;
+}
+footer .mini-container .footer-middle a p{
+  margin: 10px 0;
+}
+footer .mini-container .footer-middle a p:hover{
+  color: #E9D758;
+}
+footer .mini-container .footer-right{
+  text-align: right;
+}
+footer .mini-container .footer-right .searchbar{
+  position: relative;
+}
+footer .mini-container .footer-right .searchbar input{
+  height: 70px;
+  width: 400px;
+  border: none;
+  border-radius: 35px;
+  padding-left: 20px;
+  font-size: 25px;
+}
+footer .mini-container .footer-right .searchbar a{
+  position: absolute;
+  right: 0;
+  top: -2px;
+  padding: 30px;
+}
+footer .mini-container .footer-right h3{
+  font-size: 20px;
+  font-weight: 400;
+  padding: 20px;
+}
+footer .mini-container .footer-right p{
+  margin: 30px 0;
+}
+footer .mini-container .footer-right p span{
+  border: 1px solid #FFFFFF;
+  border-radius: 35px;
+  margin-right: 10px;
+  padding: 10px;
+}
+footer .mini-container .footer-right p:last-child{
+  color: #E9D758;
+}
+/* responsive footer */
+@media (max-width: 1199.98px) {
+  footer .mini-container{
+    flex-direction: column;
+  }
+  footer .mini-container > div{
+    margin-top: 40px;
+  }
+}
+/* fine responsive footer */
+/* fine sezione footer */
