--- a/css/style.css
+++ b/css/style.css
@@ -253,7 +253,8 @@ header .layer .left-box i{
 /* fine left box */
 /* inizio corner box */
 header .layer .corner-button a{
-  padding: 20px 25px;
+  border-radius: 50%;
+  padding: 20px 28px;
   position: fixed;
   bottom: 40px;
   right: 40px;
